# GrishaBot

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  default_settings.json  main.py  pyproject.toml  readme.md  requirements.txt  template.db
.github/workflows/: ci.yml  flake8.yml  pep-8.yml
alembic/versions/: 03109d7d3e85_.py  3093d2fc742d_.py  8d1367da7f27_.py  e56580d3106e_.py  f776a5dae318_init.py
db_updates/: 1_casino.py  2_bonus.py  3_dick.py  4_admin.py  5_casino_log.py  6_casino_history_update.py  7_bonus_rework.py  8_bonus_cooldown_reset.py
migrations/models/: 0_20220721131812_init.sql  0_20220723205823_init.sql  0_20220808213431_init.sql  0_20220830212722_init.sql  0_20220910143907_init.sql  0_20220925161136_init.sql  1_20220721143436_add_setting_model.sql  1_20220809100517_update.sql  1_20220910151534_update.sql  1_20221009004654_add_user_bonus_history.sql  2_20220911171434_update.sql  3_20220911213645_update.sql
modules/: __init__.py  aiomodels.py  balance.py  casino.py  custom_names.py  dick.py  how_long.py  insults.py  models.py  old_sex.py  person_of_day.py  phrases.py  rp.py  settings.py  sex.py  stats.py
src/: __main__.py  bot_init.py  main.py  update_settings.py
src/blueprints/: __init__.py  balance.py  casino.py  chat_invite.py  coin_game.py  custom_name.py  custom_names.py  dick.py  how_long.py  image.py  insults.py  person_of_day.py  rp.py  russian_roulette.py  setting.py  settings.py  sex.py  shop.py  stats.py
src/bot/: init.py  phrases.py  setting.py  stickers.py
src/config/: db.py  env.py  setting.py
(+34 files in other folders)
